--- a/web/cowherd.html
+++ b/web/cowherd.html
@@ -37,7 +37,7 @@ var color = d3.scaleOrdinal(d3.schemeCategory20);
 
 var simulation = d3.forceSimulation()
     .force("link", d3.forceLink().id(function(d) { return d.id; }))
-    .force("charge", d3.forceManyBody())
+    .force("charge", d3.forceManyBody().strength(-550))
     .force("center", d3.forceCenter(width / 2, height / 2));
 
 d3.json("cowherdgraph.json", function(error, graph) {
@@ -55,8 +55,8 @@ d3.json("cowherdgraph.json", function(error, graph) {
     .selectAll("circle")
     .data(graph.nodes)
     .enter().append("circle")
-      .attr("r", 3)
-      .attr("fill", function(d) { return color(d.group); })
+      .attr("r", function(d) {return 5;  })
+      .attr("fill", function(d) {return d3.schemeCategory20[d.group];  })
       .call(d3.drag()
           .on("start", dragstarted)
           .on("drag", dragged)
